tests/compile_fail/message_trait/gui/copy_protection.rs
fn a(_: impl ruci::gui::traits::Message) {}
fn b(m: ruci::CopyProtection) {
    a(m);
}

fn main() {}